# bookshelf

./: Dockerfile  README.md  conftest.py  docker-compose.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  docker-publish.yml
app/: main.py  settings.py
app/db/: connection.py
docker/: db.dockerfile  web.dockerfile
tests/: test_api.py
