[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["Kim Minki <wer153@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["standard"], version = "^2.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
